apps/overlays/dev/ecommerce-cs-agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-cs-agent-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cs-agent-dev.fcihome.com
      secretName: cs-agent-dev-tls
  rules:
    - host: cs-agent-dev.fcihome.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-cs-agent-api
                port:
                  number: 8080
